--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -3,8 +3,14 @@ body {
   font-family: 'Kanit', sans-serif;
   background: #fff;
   color: #fff;
-  font-size: 1.1em;
+  font-size: 15px;
   text-align: center;
+}
+
+@media only screen and (min-width: 700px) {
+  body {
+    font-size: 1em;
+  }
 }
 
 *, *:before, *:after {
@@ -25,83 +31,134 @@ h1, h2, h3 {
   line-height: 1em;
 }
 
-header nav {
-  top: 0;
-  width: 100%;
+a {
+  text-decoration: none;
+  color: #fff;
 }
 
-header nav .menu-icon {
-  width: 100%;
-  background: #464648b8;
-  text-align: right;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  color: #fff;
-  display: block;
+a:hover {
   cursor: pointer;
 }
 
+header nav {
+  position: absolute;
+  display: -ms-grid;
+  display: grid;
+  width: 100%;
+}
+
 @media only screen and (min-width: 700px) {
-  header nav .menu-icon {
+  header nav {
+    -ms-grid-rows: minmax(min-content, 100px) min-content;
+        grid-template-rows: minmax(-webkit-min-content, 100px) -webkit-min-content;
+        grid-template-rows: minmax(min-content, 100px) min-content;
+  }
+}
+
+header nav .menu-bar {
+  background-color: #30353cd1;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  grid-auto-flow: column;
+  -ms-flex-line-pack: space-evenly;
+      align-content: space-evenly;
+}
+
+header nav .menu-bar h1 {
+  position: relative;
+  right: 35%;
+  font-size: 25px;
+}
+
+@media only screen and (min-width: 700px) {
+  header nav .menu-bar h1 {
+    font-size: 2em;
+    right: 5em;
+  }
+}
+
+header nav .menu-bar .menu {
+  position: relative;
+  left: 2em;
+}
+
+header nav .menu-bar .menu:hover {
+  -webkit-filter: opacity(50%);
+          filter: opacity(50%);
+  cursor: pointer;
+  -moz-user-select: none;
+   -ms-user-select: none;
+       user-select: none;
+  -webkit-user-select: none;
+}
+
+@media only screen and (min-width: 700px) {
+  header nav .menu-bar .menu {
     display: none;
   }
 }
 
-header ul {
-  max-height: 0px;
-  padding: 0;
-  list-style: none;
-  overflow: hidden;
-  margin: 0;
-  -webkit-transition: all 0.1s;
-  transition: all 0.1s;
+header nav .menu-bar .links {
+  display: none;
 }
 
 @media only screen and (min-width: 700px) {
-  header ul {
-    max-height: 5em;
-    text-align: right;
-    padding-right: 1em;
-    position: absolute;
-    right: .9em;
+  header nav .menu-bar .links {
+    display: -ms-grid;
+    display: grid;
+    position: relative;
+    left: 30%;
+    font-size: 1em;
+    grid-gap: 0px;
+    place-items: center;
+    grid-auto-flow: column;
+    grid-auto-columns: minmax(-webkit-min-content, 70px);
+    grid-auto-columns: minmax(min-content, 70px);
   }
 }
 
-header li {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+@media only screen and (min-width: 700px) {
+  header nav .menu-bar {
+    background-color: #00000000;
+  }
+}
+
+header nav .dropdown {
+  display: none;
   width: 100%;
-  padding: 1.3em 0;
+  height: 10em;
+  -ms-grid-rows: auto;
+      grid-template-rows: auto;
+  background-color: #30353cd1;
+  top: 4em;
+  position: absolute;
+  z-index: 1;
   text-align: center;
 }
 
-@media only screen and (min-width: 700px) {
-  header li {
-    display: inline-block;
-    padding: 20px 0;
-    width: 3.5em;
-  }
-}
-
-header li a {
-  text-decoration: none;
-  color: rgba(255, 255, 255, 0.7);
+header nav .dropdown a {
   font-size: 15px;
+  color: white;
+  padding: 20px 0;
+  width: 5em;
+  margin: auto;
+  text-decoration: none;
+}
+
+header nav .dropdown a:hover {
+  opacity: .7;
+  cursor: pointer;
+  -moz-user-select: none;
+   -ms-user-select: none;
+       user-select: none;
+  -webkit-user-select: none;
 }
 
 @media only screen and (min-width: 700px) {
-  header li a {
-    font-size: 17px;
+  header nav .dropdown a {
+    font-size: 18px;
   }
-}
-
-header li a:hover {
-  opacity: 0.6;
-  cursor: pointer;
-}
-
-header li a.current {
-  color: #fff;
 }
 
 #showcase {
@@ -139,7 +196,7 @@ header li a.current {
   position: relative;
   width: 18em;
   margin: 0 auto;
-  top: 7em;
+  top: 10em;
 }
 
 #showcase .content-wrap #question_answer h1 {
@@ -179,7 +236,7 @@ header li a.current {
   background: #377166c9;
   padding: 0.5em 0;
   color: #fff;
-  opacity: 0.6;
+  opacity: 0.9;
 }
 
 #showcase .content-wrap #question_answer a:hover {
@@ -196,7 +253,7 @@ header li a.current {
 @media only screen and (min-width: 700px) {
   #showcase .content-wrap #question_answer {
     width: 20em;
-    top: 7em;
+    top: 11em;
   }
 }
 
