--- a/UI/scss/global.scss
+++ b/UI/scss/global.scss
@@ -6,8 +6,11 @@ body {
   font-family: 'Kanit', sans-serif;
   background: $white;
   color: $white;
-  font-size: 1.1em;
+  font-size: 15px;
   text-align: center;
+  @media only screen and (min-width: 700px) {
+    font-size: 1em;
+ }
 }
 
 *,*:before,*:after{
@@ -26,4 +29,12 @@ h1, h2, h3{
   margin: 0;
   padding: 1em 0;
   line-height: 1em;
+}
+
+a {
+  text-decoration: none;
+  color: $white;
+    &:hover{
+      cursor: pointer;
+  }
 }
