--- a/UI/scss/mixins.scss
+++ b/UI/scss/mixins.scss
@@ -1,6 +1,6 @@
 @import "variables";
 
-@mixin menu-icon {
+@mixin nav {
   width: 100%;
   background: $navbar;
   // height: 60px;
@@ -8,7 +8,6 @@
   box-sizing: border-box;
   // padding: 13px 24px;
   color: #fff;
-  display: block;
   cursor: pointer;
   
 
