--- a/UI/scss/style.scss
+++ b/UI/scss/style.scss
@@ -5,57 +5,93 @@
 // header
 header {
   nav{
-    top: 0;
+    position: absolute;
+    display: grid;
     width: 100%;
+    @media only screen and (min-width: 700px) {
+      grid-template-rows: minmax(min-content, 100px) min-content;
+    }
     
-    .menu-icon {
-      @include menu-icon;
-    }
-  }
+    .menu-bar {
+      background-color: $navbar;
+      display: grid;
+      place-items: center;
+      grid-auto-flow: column;
+      align-content: space-evenly;
 
-  ul {
-    max-height: 0px;
-    padding: 0;
-    list-style: none;
-    overflow: hidden;
-    margin: 0;
-    transition: all 0.1s;
-    @media only screen and (min-width: 700px) {
-      max-height: 5em;
-      text-align: right;
-      padding-right: 1em;
-      position: absolute;
-      right: .9em;
-    }
-  }
+      h1 {
+        position: relative;
+        right: 35%;
+        font-size: 25px;
+        @media only screen and (min-width: 700px) {
+          font-size: 2em;
+          right: 5em;
+        }
+      }
 
-  li {
-    box-sizing: border-box;
-    width: 100%;
-    padding: 1.3em 0;
-    text-align: center;
-    @media only screen and (min-width: 700px) {
-      display: inline-block;
-      padding: 20px 0;
-      width: 3.5em;
-    }
-    a {
-      text-decoration: none;
-      color: rgba(255, 255, 255, 0.7);
-      font-size: 15px;
+      
+      .menu{
+        position: relative;
+        left: 2em;
+        &:hover{
+          filter: opacity(50%);
+          cursor: pointer;
+          user-select: none;
+          -webkit-user-select: none;
+        }
+        @media only screen and (min-width: 700px) {
+          display: none;
+        }
+      }
+      .links {
+        display: none;
+        @media only screen and (min-width: 700px) {
+          display: grid;
+          position: relative;
+          left: 30%;
+          font-size: 1em;
+          grid-gap: 0px;
+          place-items: center;
+          grid-auto-flow: column;
+          grid-auto-columns: minmax(min-content, 70px);
+        }
+      }
       @media only screen and (min-width: 700px) {
-        font-size: 17px;
-      }
-
-      &:hover {
-        opacity: 0.6;
-        cursor: pointer;
-      }
-      &.current {
-        color: $white;
+        background-color: #00000000;
       }
     }
+    .dropdown {
+      display: none;
+      width: 100%;
+      height: 10em;
+      grid-template-rows: auto;
+      background-color: $navbar;
+      top: 4em;
+      position: absolute;
+      z-index: 1;
+      text-align: center;
+  
+      a{
+          font-size: 15px;
+          color: white;
+          padding: 20px 0;
+          width: 5em;
+          margin: auto;
+          text-decoration: none;
+
+          &:hover{
+            opacity: .7;
+            cursor: pointer;
+            user-select: none;
+            -webkit-user-select: none;;
+          }
+          @media only screen and (min-width: 700px) {
+            font-size: 18px;
+          }
+        }
+    }
   }
+
 }
   #showcase {
     height: 600px;
@@ -89,7 +125,7 @@ header {
           position: relative;
           width: 18em;
           margin: 0 auto;
-          top: 7em;
+          top: 10em;
 
           h1 {
             padding-bottom: 0;
@@ -120,7 +156,7 @@ header {
             background: #377166c9;
             padding: 0.5em 0;
             color: $white;
-            opacity: 0.6;
+            opacity: 0.9;
             &:hover {
               opacity: 0.3;
               cursor: pointer;
@@ -131,7 +167,7 @@ header {
         }
         @media only screen and (min-width: 700px) {
           width:20em;
-          top: 7em;
+          top: 11em;
         }
       }
 
