--- a/UI/scss/mixins.scss
+++ b/UI/scss/mixins.scss
@@ -15,3 +15,116 @@
       display: none;
   }
 }
+
+@mixin background{
+  position: absolute;
+  background: url("./../images/img1.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 685px;
+  z-index: -2;
+  opacity: 0.85;
+  -webkit-transition: background-image 7s ease-in-out;
+  -moz-transition: background-image 7s ease-in-out;
+  -o-transition: background-image 7s ease-in-out;
+  transition: background-image 7s ease-in-out;
+  @media only screen and (min-width: 700px) {
+    height: 783px;
+  }
+}
+
+@mixin menu-bar{ 
+  background-color: $navbar;
+  display: grid;
+  place-items: center;
+  grid-auto-flow: column;
+  align-content: space-evenly;
+
+  h1 {
+    position: relative;
+    right: 35%;
+    font-size: 25px;
+    @media only screen and (min-width: 700px) {
+      font-size: 2em;
+      right: 5em;
+    }
+  }
+
+  
+  .menu{
+    position: relative;
+    left: 2em;
+    &:hover{
+      filter: opacity(50%);
+      cursor: pointer;
+      user-select: none;
+      -webkit-user-select: none;
+    }
+    @media only screen and (min-width: 700px) {
+      display: none;
+    }
+  }
+  .links {
+    display: none;
+    @media only screen and (min-width: 700px) {
+      display: grid;
+      position: relative;
+      left: 30%;
+      font-size: 1em;
+      grid-gap: 0px;
+      place-items: center;
+      grid-auto-flow: column;
+      grid-auto-columns: minmax(min-content, 70px);
+    }
+  }
+  @media only screen and (min-width: 700px) {
+    background-color: #00000000;
+  }
+}
+
+@mixin dropdown{
+  display: none;
+  width: 100%;
+  height: 10em;
+  grid-template-rows: auto;
+  background-color: $navbar;
+  top: 4em;
+  position: absolute;
+  z-index: 1;
+  text-align: center;
+
+  a{
+      font-size: 15px;
+      color: white;
+      padding: 20px 0;
+      width: 5em;
+      margin: auto;
+      text-decoration: none;
+
+      &:hover{
+        opacity: .7;
+        cursor: pointer;
+        user-select: none;
+        -webkit-user-select: none;;
+      }
+      @media only screen and (min-width: 700px) {
+        font-size: 18px;
+      }
+    }
+}
+@mixin sidebar{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 200px;
+  z-index:3;
+  height: 605px;
+  padding: 5em 0em;
+  background: #13161f;
+  text-align: center;
+  transform-origin: left;
+  transform:perspective(1200px) rotateY(90deg);
+  transition: all 400ms ease;
+}
