--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -74,7 +74,12 @@ header nav .menu-bar h1 {
 @media only screen and (min-width: 700px) {
   header nav .menu-bar h1 {
     font-size: 2em;
-    right: 5em;
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+  header nav .menu-bar h1 {
+    right: 40%;
   }
 }
 
@@ -161,6 +166,12 @@ header nav .dropdown a:hover {
   }
 }
 
+@media only screen and (min-width: 700px) {
+  header nav .dropdown {
+    display: none;
+  }
+}
+
 header nav .sidebar {
   display: -ms-grid;
   display: grid;
@@ -168,8 +179,8 @@ header nav .sidebar {
       grid-template-rows: auto;
   width: 200px;
   z-index: 3;
-  height: 605px;
-  padding: 5em 0em;
+  height: 79vh;
+  padding: 2em 0em;
   background: #13161f;
   text-align: center;
   -webkit-transform-origin: left;
@@ -182,6 +193,8 @@ header nav .sidebar {
 
 @media only screen and (min-width: 700px) {
   header nav .sidebar {
+    position: relative;
+    bottom: 1.45em;
     width: 30%;
     -webkit-transform: none;
             transform: none;
@@ -200,8 +213,19 @@ header nav .sidebar {
 header nav .sidebar.active {
   -webkit-transform: perspective(1200px) rotateY(0deg);
           transform: perspective(1200px) rotateY(0deg);
-  display: -ms-grid;
-  display: grid;
+}
+
+header nav .sidebar a {
+  display: inline-block;
+  color: #fff;
+  font-size: .8em;
+  width: 100%;
+  text-align: center;
+  list-style-type: none;
+  text-decoration: none;
+  height: 40px;
+  border-bottom: 1px solid #ffffff1e;
+  line-height: 50px;
 }
 
 #showcase {
@@ -222,7 +246,7 @@ header nav .sidebar.active {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 685px;
+  height: 100vh;
   z-index: -2;
   opacity: 0.85;
   -webkit-transition: background-image 7s ease-in-out;
@@ -231,7 +255,7 @@ header nav .sidebar.active {
 
 @media only screen and (min-width: 700px) {
   #showcase #bg-image {
-    height: 783px;
+    height: 100vh;
   }
 }
 
@@ -300,22 +324,29 @@ header nav .sidebar.active {
   }
 }
 
-.container .sidebar {
+.container {
+  height: 100vh;
+}
+
+#user-background-image {
   position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 200px;
-  z-index: 3;
-  height: 605px;
-  padding: 5em 0em;
-  background: #13161f;
-  text-align: center;
-  -webkit-transform-origin: left;
-          transform-origin: left;
-  -webkit-transform: perspective(1200px) rotateY(90deg);
-          transform: perspective(1200px) rotateY(90deg);
-  -webkit-transition: all 400ms ease;
-  transition: all 400ms ease;
+  background: url("./../images/img1.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  z-index: -2;
+  opacity: 0.85;
+  -webkit-transition: background-image 7s ease-in-out;
+  transition: background-image 7s ease-in-out;
+  opacity: 1;
+}
+
+@media only screen and (min-width: 700px) {
+  #user-background-image {
+    height: 100vh;
+  }
 }
 
 /* footer */
