--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -229,14 +229,8 @@ header nav .sidebar a {
 }
 
 #showcase {
-  height: 600px;
+  height: 100vh;
   background-color: rgba(3, 7, 29, 0.361);
-}
-
-@media only screen and (min-width: 700px) {
-  #showcase {
-    height: 700px;
-  }
 }
 
 #showcase #bg-image {
