--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -3,7 +3,7 @@ body {
   font-family: 'Kanit', sans-serif;
   background: #fff;
   color: #fff;
-  font-size: 15px;
+  font-size: 12px;
   text-align: center;
 }
 
@@ -56,7 +56,7 @@ header nav {
 }
 
 header nav .menu-bar {
-  background-color: #30353cd1;
+  background-color: #0b1213ba;
   display: -ms-grid;
   display: grid;
   place-items: center;
@@ -67,7 +67,7 @@ header nav .menu-bar {
 
 header nav .menu-bar h1 {
   position: relative;
-  right: 35%;
+  right: 30%;
   font-size: 25px;
 }
 
@@ -135,7 +135,7 @@ header nav .dropdown {
   height: 10em;
   -ms-grid-rows: auto;
       grid-template-rows: auto;
-  background-color: #30353cd1;
+  background-color: #0b1213ba;
   top: 4em;
   position: absolute;
   z-index: 1;
@@ -181,7 +181,7 @@ header nav .sidebar {
   z-index: 3;
   height: 79vh;
   padding: 2em 0em;
-  background: #13161f;
+  background: #0b1213ba;
   text-align: center;
   -webkit-transform-origin: left;
           transform-origin: left;
@@ -229,7 +229,7 @@ header nav .sidebar a {
 }
 
 #showcase {
-  height: 100vh;
+  height: 70em;
   background-color: rgba(3, 7, 29, 0.361);
 }
 
@@ -240,11 +240,12 @@ header nav .sidebar a {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 100vh;
+  height: 70em;
   z-index: -2;
   opacity: 0.85;
   -webkit-transition: background-image 7s ease-in-out;
   transition: background-image 7s ease-in-out;
+  opacity: 1;
 }
 
 @media only screen and (min-width: 700px) {
@@ -319,7 +320,7 @@ header nav .sidebar a {
 }
 
 .container {
-  height: 100vh;
+  height: 70em;
 }
 
 #user-background-image {
@@ -329,11 +330,12 @@ header nav .sidebar a {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 100vh;
+  height: 70em;
   z-index: -2;
   opacity: 0.85;
   -webkit-transition: background-image 7s ease-in-out;
   transition: background-image 7s ease-in-out;
+  background: url("./../images/img7.jpg");
   opacity: 1;
 }
 
@@ -343,10 +345,175 @@ header nav .sidebar a {
   }
 }
 
+.main-content {
+  position: relative;
+  top: 10em;
+  font-size: .8em;
+  padding: 0 1em;
+}
+
+.main-content #ask_question {
+  position: relative;
+  left: 9em;
+}
+
+.main-content #ask_question button[type="submit"] {
+  width: 9em;
+  background-color: #0f1d1b;
+}
+
+.main-content .questions {
+  display: -ms-grid;
+  display: grid;
+  grid-column-gap: 1.5em;
+  -ms-grid-columns: 5% 85% 10%;
+      grid-template-columns: 5% 85% 10%;
+  border-bottom: #ffebcd2b 1px solid;
+}
+
+.main-content .questions .profile_img_section {
+  margin: .8em 0 0 0;
+}
+
+.main-content .questions .profile_img_section .profile_img {
+  width: 3em;
+  height: 3em;
+  border: blanchedalmond 1px solid;
+  border-radius: 50%;
+}
+
+.main-content .questions .questions_section {
+  margin: 0 0 1em 0;
+  /* .menu_section{
+
+        .menu_icon{
+          width: 2em;
+        }
+      } */
+}
+
+.main-content .questions .questions_section h4.username {
+  text-align: left;
+  margin: 1em 0 .5em 1em;
+  font-size: 1.2em;
+}
+
+.main-content .questions .questions_section p {
+  width: 92%;
+  margin: 0 0 1em 1em;
+  text-align: left;
+  color: #c7bdbd;
+}
+
+.main-content .questions .questions_section .icons {
+  position: relative;
+  text-align: left;
+}
+
+.main-content .questions .questions_section .icons img {
+  width: 2em;
+  display: inline-block;
+}
+
+.main-content .questions .questions_section .icons .comment {
+  width: 2.7em;
+  margin: 0 1em;
+}
+
+.main-content .questions .questions_section .icons .like {
+  position: relative;
+  bottom: .4em;
+}
+
+.main-content .questions .questions_section h3 {
+  float: left;
+  padding-left: 1em;
+}
+
+.main-content .questions .questions_section .table_head {
+  padding-top: 10em;
+  padding-bottom: 1.5em;
+}
+
+@media only screen and (min-width: 700px) {
+  .main-content .questions .questions_section .table_head {
+    padding-top: 4em;
+  }
+}
+
+.main-content .questions .questions_section h1 {
+  margin: 0;
+  line-height: 1em;
+}
+
+.main-content .questions .questions_section table {
+  width: 100%;
+  border-collapse: collapse;
+  background: rgba(11, 10, 25, 0.588);
+}
+
+.main-content .questions .questions_section table thead {
+  font-weight: bold;
+  text-align: center;
+  background-color: #ada29a;
+}
+
+@media only screen and (min-width: 700px) {
+  .main-content .questions .questions_section table thead {
+    font-size: 16px;
+  }
+}
+
+.main-content .questions .questions_section table .fa {
+  border: 0;
+  cursor: pointer;
+  color: #ffffff94;
+}
+
+.main-content .questions .questions_section table a {
+  text-decoration: none;
+  color: #161514;
+}
+
+.main-content .questions .questions_section table a:hover {
+  border-bottom: rgba(22, 21, 20, 0.31) 1px solid;
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+@media only screen and (min-width: 700px) {
+  .main-content .questions .questions_section table tbody {
+    font-size: 16px;
+  }
+}
+
+.main-content .questions .questions_section table tr, .main-content .questions .questions_section table td {
+  padding: 12px 7px;
+  font-size: 11px;
+  text-align: center;
+}
+
+@media only screen and (min-width: 700px) {
+  .main-content .questions .questions_section table tr, .main-content .questions .questions_section table td {
+    font-size: 14px;
+  }
+}
+
+.main-content .questions .questions_section input[type="text"], .main-content .questions .questions_section button[type="submit"] {
+  border-radius: 5px;
+}
+
+.main-content .questions .menu_section .menu_icon {
+  width: 2em;
+  position: relative;
+  left: -4em;
+  top: .9em;
+}
+
 /* footer */
 #footer {
   padding: 2em;
-  background: #2f3039;
+  background: #080e0f;
   color: #fff;
   font-size: 1.2em;
   text-align: center;
@@ -359,27 +526,6 @@ header nav .sidebar a {
 
 #footer a {
   text-decoration: none;
-}
-
-#footer .fa {
-  padding: 0.4em;
-  font-size: 1.5em;
-}
-
-#footer .fa:hover {
-  color: #d5d5d5;
-}
-
-#footer .fa-twitter {
-  color: #00aced;
-}
-
-#footer .fa-instagram {
-  color: #517fa4;
-}
-
-#footer .fa-youtube {
-  color: #bb0000;
 }
 
 input[type="text"],
@@ -439,5 +585,135 @@ button[type="submit"]:hover {
 
 button[type="submit"]:focus {
   outline: none;
+}
+
+#modal_make_comment, #modal_ask_question {
+  display: none;
+  position: fixed;
+  z-index: 1004;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.356);
+}
+
+#make_comment_content {
+  position: relative;
+  z-index: 100;
+  background-color: #fefefe;
+  margin: 10% 0 10% 7%;
+  padding: 0 1em;
+  top: 4em;
+  width: 70%;
+  padding-bottom: 30px;
+}
+
+@media only screen and (min-width: 900px) {
+  #make_comment_content {
+    margin: 6em auto;
+    width: 35em;
+  }
+}
+
+#make_comment_content h1 {
+  color: #000;
+  font-size: 1.2em;
+}
+
+@media only screen and (min-width: 700px) {
+  #make_comment_content h1 {
+    font-size: 1.3em;
+  }
+}
+
+#make_comment_content table {
+  width: 100%;
+  margin: 0 auto;
+}
+
+#make_comment_content label {
+  color: #000;
+  font-size: .8em;
+  font-weight: bold;
+  padding: 0 0 1em 0;
+  text-align: center;
+  margin-right: 0.4em;
+}
+
+@media only screen and (min-width: 700px) {
+  #make_comment_content label {
+    font-size: 1em;
+    padding: 0;
+  }
+}
+
+#make_comment_content input[type="text"] {
+  width: 80%;
+  border: rgba(31, 29, 26, 0.494) 1px solid;
+  border-radius: 2px;
+  height: 1.5em;
+  padding: .5em;
+  font-size: 14px;
+}
+
+@media only screen and (min-width: 700px) {
+  #make_comment_content input[type="text"] {
+    width: 70%;
+    font-size: .8em;
+    height: 3em;
+    margin: 1em 0 0 0;
+  }
+}
+
+#make_comment_content input[type="date"] {
+  border: rgba(31, 29, 26, 0.494) 1px solid;
+  border-radius: 2px;
+  height: 1.5em;
+  padding: .5em;
+  font-size: 14px;
+}
+
+@media only screen and (min-width: 700px) {
+  #make_comment_content input[type="date"] {
+    font-size: 1.1em;
+    height: 3em;
+    margin: 1em 0 0 0;
+  }
+}
+
+#make_comment_content textarea {
+  width: 90%;
+  border: rgba(31, 29, 26, 0.494) 1px solid;
+  margin: 1em 0 0 0;
+  padding: .5em;
+}
+
+#make_comment_content button[type='submit'] {
+  width: 8em;
+  float: right;
+  margin-right: 1em;
+  font-size: .7em;
+  background-color: #051313;
+}
+
+@media only screen and (min-width: 700px) {
+  #make_comment_content button[type='submit'] {
+    float: none;
+    width: 11em;
+    margin: 1em 0 0 8em;
+  }
+}
+
+span {
+  position: absolute;
+  font-size: 1.5em;
+  color: #000;
+  right: 10px;
+}
+
+span:hover {
+  cursor: pointer;
 }
 /*# sourceMappingURL=style.css.map */
