--- a/UI/scss/mixins.scss
+++ b/UI/scss/mixins.scss
@@ -23,7 +23,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 100vh;
+  height: 70em;
   z-index: -2;
   opacity: 0.85;
   -webkit-transition: background-image 7s ease-in-out;
@@ -44,7 +44,7 @@
 
   h1 {
     position: relative;
-    right: 35%;
+    right: 30%;
     font-size: 25px;
     @media only screen and (min-width: 700px) {
       font-size: 2em;
@@ -126,7 +126,7 @@
   z-index:3;
   height: 79vh;
   padding: 2em 0em;
-  background: #13161f;
+  background: $navbar;
   text-align: center;
   transform-origin: left;
   transform:perspective(1200px) rotateY(90deg);
@@ -158,4 +158,59 @@
    border-bottom: 1px solid #ffffff1e;
    line-height: 50px;
  }
+}
+
+@mixin Table{
+  .table_head{
+    padding-top: 10em;
+    padding-bottom: 1.5em;
+    @media only screen and (min-width: 700px) {
+        padding-top: 4em;
+    }
+  }
+  h1{
+    margin: 0;
+    line-height: 1em;
+  }
+  table{
+      width :100%; 
+      border-collapse: collapse;
+      background: rgba(11, 10, 25, 0.588); 
+      thead{
+          font-weight: bold;
+          text-align:center;
+          background-color:#ada29a;
+          @media only screen and (min-width: 700px) {
+              font-size: 16px;
+          }
+      }
+      .fa{
+          border:0;
+          cursor:pointer;
+          color: #ffffff94;
+      }
+      a{
+          text-decoration:none;
+          color: #161514 ;
+          &:hover{
+              border-bottom: rgba(22, 21, 20, 0.31) 1px solid;
+              opacity:0.8;
+              cursor: pointer;
+          }
+      }
+      tbody {
+          @media only screen and (min-width: 700px) {
+              font-size: 16px;
+          }
+      } 
+      tr,td{
+          padding: 12px 7px;
+          font-size: 11px;
+          text-align:center;
+          @media only screen and (min-width: 700px) {
+              font-size: 14px;
+          }
+      }
+    }
+
 }
