--- a/UI/scss/style.scss
+++ b/UI/scss/style.scss
@@ -29,13 +29,15 @@ header {
 
 }
   #showcase {
-    height: 100vh;
+    height: 70em;
     background-color: rgba(3, 7, 29, 0.361);
     @media only screen and (min-width: 700px) {
     //  height: 100vh;
     }
     #bg-image {
       @include background;
+      opacity: 1;
+
     }
 
     .content-wrap {
@@ -95,18 +97,117 @@ header {
     }
   }
 .container{
-  height: 100vh;
+  height: 70em;
 }
-  #user-background-image{
-    @include background;
-    opacity: 1;
+
+#user-background-image{
+  @include background;
+  background: url("./../images/img7.jpg");
+  opacity: 1;
+}
+
+.main-content{
+  position: relative;
+  top: 10em;
+  font-size: .8em;
+  padding: 0 1em;
+
+  #ask_question{
+    position: relative;
+    left: 9em;
+    button[type="submit"] {
+      width: 9em;
+      background-color: #0f1d1b;
+    }
   }
+
+  .questions{
+    display: grid;
+    grid-column-gap: 1.5em;
+    grid-template-columns: 5% 85% 10%;
+    border-bottom: #ffebcd2b 1px solid;
+
+    .profile_img_section{
+      margin: .8em 0 0 0;
+      .profile_img{
+        width: 3em;
+        height: 3em;
+        border: blanchedalmond 1px solid;
+        border-radius: 50%;
+      }
+    }
+
+    .questions_section{
+      margin: 0 0 1em 0;
+      //width: 90%;
+      h4.username{
+        text-align: left;
+        margin: 1em 0 .5em 1em;
+        font-size: 1.2em;
+      }
+      p{
+        width: 92%;
+        margin: 0 0 1em 1em;
+        text-align: left;
+        color: #c7bdbd;
+       // white-space: nowrap;
+       // text-overflow: ellipsis;
+       // overflow: hidden;
+       }
+      .icons {
+        position: relative;
+        text-align: left;
+        img{
+          width: 2em;
+          display: inline-block;
+        }
+        .comment{
+          width: 2.7em;
+          margin: 0 1em;
+        }
+        .like{
+        position: relative;
+        bottom: .4em;
+        }
+      }
+
+     /* .menu_section{
+
+        .menu_icon{
+          width: 2em;
+        }
+      } */
+      
+
+       h3{ 
+         float:left;
+         padding-left:1em;
+       }
+     
+       @include Table;
+    
+       input[type="text"], button[type="submit"]{
+        border-radius: 5px;
+       }
+    }
+
+    .menu_section{
+
+      .menu_icon{
+        width:2em;
+        position: relative;
+        left: -4em;
+        top: .9em;
+      }
+    }
+  }
+}
 
 
 /* footer */
 #footer {
   padding: 2em;
-  background: #2f3039;
+  background: #080e0f;
   color: #fff;
   font-size: 1.2em;
   text-align: center;
@@ -116,22 +217,6 @@ header {
   }
   a {
     text-decoration: none;
-  }
-  .fa {
-    padding: 0.4em;
-    font-size: 1.5em;
-    &:hover {
-      color: #d5d5d5;
-    }
-  }
-  .fa-twitter {
-    color: #00aced;
-  }
-  .fa-instagram {
-    color: #517fa4;
-  }
-  .fa-youtube {
-    color: #bb0000;
   }
 }
 
@@ -183,5 +268,115 @@ button[type="submit"] {
   }
   &:focus {
     outline: none;
+  }
+}
+
+//Modals
+
+// Modals
+#modal_make_comment,#modal_ask_question{
+ display: none;
+  position: fixed;
+  z-index: 1004;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.356);
+}
+
+#make_comment_content{
+  position: relative;
+  z-index: 100;
+  background-color: #fefefe;
+  margin: 10% 0 10% 7%;
+  padding: 0 1em;
+  top: 4em;
+  width: 70%;
+  padding-bottom: 30px;
+  @media only screen and (min-width: 900px) {
+      margin: 6em auto;
+      width:35em;
+  }
+  h1{
+      color: #000;
+      font-size: 1.2em;
+      @media only screen and (min-width: 700px) {
+          font-size: 1.3em;
+      }
+
+  }
+  table{
+      width: 100%;
+      margin: 0 auto;
+  }
+  label {
+      color: #000;
+      font-size: .8em;
+      font-weight: bold;
+      padding: 0 0 1em 0;
+      text-align: center;
+      margin-right: 0.4em;
+      @media only screen and (min-width: 700px) {
+          font-size: 1em;
+          padding: 0;
+      }
+  }
+  input[type="text"] {
+      width: 80%;
+      border:  rgba(31, 29, 26, 0.494) 1px solid;
+      border-radius: 2px;
+      height: 1.5em;
+      padding: .5em;
+      font-size: 14px;
+      @media only screen and (min-width: 700px) {
+          width: 70%;
+          font-size: .8em;
+          height: 3em;
+          margin: 1em 0 0 0;
+      }
+  }
+  input[type="date"] {
+    border:  rgba(31, 29, 26, 0.494) 1px solid;
+    border-radius: 2px;
+    height: 1.5em;
+    padding: .5em;
+    font-size: 14px;
+    @media only screen and (min-width: 700px) {
+        font-size: 1.1em;
+        height: 3em;
+        margin: 1em 0 0 0;
+    }
+}
+  textarea{
+      width: 90%;
+      border:  rgba(31, 29, 26, 0.494) 1px solid;
+      margin: 1em 0 0 0;
+      padding: .5em;
+  }
+
+  button[type='submit']{
+      width: 8em;
+      float: right;
+      margin-right: 1em;
+      font-size: .7em;
+      background-color: #051313;    
+      @media only screen and (min-width: 700px) {
+      float: none;
+      width: 11em;
+      margin: 1em 0 0 8em;
+    }
+  }
+}
+
+// close 
+span{
+  position: absolute;
+  font-size: 1.5em;
+  color: #000;
+  right: 10px;
+  &:hover {
+      cursor: pointer;
   }
 }
