--- a/UI/scss/style.scss
+++ b/UI/scss/style.scss
@@ -113,6 +113,8 @@ header {
   padding: 0 1em;
 
   #ask_question{
+    position: relative;
+    left: 1.5em;
     padding-top: 2em;
     margin-bottom: 3em;
     input[type="text"]{
