--- a/UI/scss/style.scss
+++ b/UI/scss/style.scss
@@ -202,10 +202,10 @@ header {
       .menu_section{
 
         .menu_icon{
-          width:2em;
+          font-size: 2em;
           position: relative;
-          left: -4em;
-          top: .9em;
+          top: .2em;
+          right: 1.7em;
 
           &:hover{
             cursor: pointer;
