--- a/UI/scss/mixins.scss
+++ b/UI/scss/mixins.scss
@@ -6,6 +6,7 @@
   // height: 60px;
   text-align: right;
   box-sizing: border-box;
+  z-index: 2;
   // padding: 13px 24px;
   color: #fff;
   cursor: pointer;
@@ -17,13 +18,13 @@
 }
 
 @mixin background{
-  position: absolute;
+  position: fixed;
   background: url("./../images/img1.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 70em;
+  height: 100vh;
   z-index: -2;
   opacity: 0.85;
   -webkit-transition: background-image 7s ease-in-out;
@@ -43,6 +44,7 @@
   align-content: space-evenly;
 
   h1 {
+    z-index: 5;
     position: relative;
     right: 30%;
     font-size: 25px;
@@ -120,10 +122,11 @@
     }
 }
 @mixin sidebar{
+  position: absolute;
   display: grid;
   grid-template-rows: auto;
   width: 200px;
-  z-index:3;
+  z-index:1;
   height: 79vh;
   padding: 2em 0em;
   background: $navbar;
