--- a/UI/scss/style.scss
+++ b/UI/scss/style.scss
@@ -6,7 +6,8 @@
 // header
 header {
   nav{
-    position: absolute;
+    z-index: 3;
+    position: fixed;
     display: grid;
     width: 100%;
     @media only screen and (min-width: 700px) {
@@ -29,7 +30,7 @@ header {
 
 }
   #showcase {
-    height: 70em;
+    height: 100vh;
     background-color: rgba(3, 7, 29, 0.361);
     @media only screen and (min-width: 700px) {
     //  height: 100vh;
@@ -97,7 +98,7 @@ header {
     }
   }
 .container{
-  height: 70em;
+  height: 100vh;
 }
 
 #user-background-image{
@@ -111,10 +112,11 @@ header {
   top: 10em;
   font-size: .8em;
   padding: 0 1em;
+  overflow: hidden;
+  padding-bottom: 11em;
 
   #ask_question{
     position: relative;
-    left: 1.5em;
     padding-top: 2em;
     margin-bottom: 3em;
     input[type="text"]{
@@ -206,7 +208,7 @@ header {
           color: white;
           border-color: transparent;
           position: relative;
-          right: 5em;
+          right: 3.5em;
           top: .3em;
           
 
@@ -242,11 +244,11 @@ header {
 
 /* footer */
 #footer {
-  padding: 2em;
   background: #080e0f;
-  color: #fff;
-  font-size: 1.2em;
-  text-align: center;
+  position: fixed;
+  width: 100%;
+  height: 3rem;
+  bottom: 0;
   p {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 0.8em;
