--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -750,8 +750,9 @@ button[type="submit"]:focus {
 span {
   position: absolute;
   font-size: 1.5em;
-  color: #000;
+  color: #fff;
   right: 10px;
+  z-index: 1;
 }
 
 span:hover {
@@ -785,6 +786,51 @@ span:hover {
 }
 
 .dropdown li a:hover {
+  opacity: 0.7;
+}
+
+.modal_dropdown {
+  padding: 0;
+  margin: 0;
+  display: none;
+  position: fixed;
+  z-index: 1004;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.356);
+}
+
+.modal_dropdown #dropdown_section {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+.modal_dropdown #dropdown_section ul {
+  margin: 0;
+  padding: 0;
+}
+
+.modal_dropdown #dropdown_section li {
+  background: #070c0cf5;
+  position: relative;
+  list-style: none;
+  border-bottom: #ffebcd0d 1px solid;
+  width: 100%;
+}
+
+.modal_dropdown #dropdown_section li a {
+  padding: 0 10px;
+  color: white;
+  text-decoration: none;
+  line-height: 4em;
+  font-size: 13px;
+}
+
+.modal_dropdown #dropdown_section li a:hover {
   opacity: 0.7;
 }
 /*# sourceMappingURL=style.css.map */
