--- a/UI/scss/style.scss
+++ b/UI/scss/style.scss
@@ -118,7 +118,21 @@ header {
   #ask_question{
     position: relative;
     padding-top: 2em;
-    margin-bottom: 3em;
+    margin-bottom: 1em;
+
+      h3{
+      text-align: left;
+      position: relative;
+      left: 2.5em;
+      font-size: 1.5em;
+      margin-bottom: 1em;
+      }
+
+      p{
+        font-size: 15px;
+        text-align: left;
+        margin: 0 1em 0 1em;
+      }
     input[type="text"]{
       width: 70%;
       border-radius: 4px;
@@ -175,17 +189,31 @@ header {
         .icons {
           position: relative;
           text-align: left;
+          top: .8em;
+          left: 1em;
           img{
             width: 2em;
             display: inline-block;
           }
           .comment{
-            width: 2.7em;
-            margin: 0 1em;
+            position: relative;
+            bottom: .5em;
+            font-size: 1.7em;
+            color: #fff;
           }
-          .like{
-          position: relative;
-          bottom: .4em;
+          .like, .unlike{
+            position: relative;
+            bottom: .45em;
+            left: .7em;
+            font-size: 1.7em;
+            color: #fff;
+
+            &:hover{
+              cursor: pointer;
+            }
+          }
+          .unlike{
+            color: #b71515;
           }
         }
 
@@ -211,7 +239,6 @@ header {
           right: 3.5em;
           top: .3em;
           
-
           &:focus{
             outline:none;
           }
@@ -224,8 +251,6 @@ header {
             width: 2em;
           }
         }
-        
-
         .menu_icon{
           font-size: 2em;
           position: relative;
@@ -239,6 +264,58 @@ header {
       }
     }
   }
+
+  #profile_image{
+    position: relative;
+    padding-top: 2em;
+    margin-bottom: 1em;
+
+    .profile_image_section{
+
+      .profile_image{
+        margin: 0 auto;
+        width: 8em;
+        height: 8em;
+        border: blanchedalmond 1px solid;
+        border-radius: 50%;
+      }
+      #profile_image_icon{
+        font-size: 2em;
+        position: relative;
+        left: 3em;
+        color: #7d8a8cb8;
+      }
+    }
+  }
+
+  #profile_form{
+    margin-top: 5em;
+
+    input[type="text"],
+    input[type="number"]{
+      background: #0c131900;
+      border-bottom: rgba(195, 166, 166, 0.85) 1px solid;
+      width: 70%;
+     // border: rgba(195, 166, 166, 0.85) 0px solid;
+    }
+    button[type="submit"] {
+      // background: #0c131900;
+      border-bottom: rgba(195, 166, 166, 0.85) 0px solid;
+      width: 80%;
+      position: relative;
+      background: #031111;
+      top: 6em;
+    }
+
+    
+    #form_icon{
+      font-size: 1.3em;
+      position: relative;
+      top: .9em;
+      margin-left: 1em;
+    }
+  }
+
 }
 
 
@@ -260,6 +337,7 @@ header {
 
 // SIGNUP $& LOGIN
 input[type="text"],
+input[type="number"],
 input[type="password"],
 button[type="submit"] {
   border: rgba(10, 10, 10, 0.34) 1px solid;
@@ -412,6 +490,41 @@ button[type="submit"] {
   }
 }
 
+#password_reset_modal{
+ display: none;
+  position: fixed;
+  z-index: 1004;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.356);
+
+
+  .password_reset_form{
+    position: relative;
+    z-index: 100;
+    background-color: #fefefe;
+    margin: 10% 0 10% 7%;
+    padding: 3em 1em;
+    top: 10em;
+    left: 1em;
+    width: 70%;
+    @media only screen and (min-width: 900px) {
+        margin: 6em auto;
+        width:35em;
+    }
+
+    .close{
+      top: 0;
+      font-weight: bold;
+      font-size: 1.9em;
+      color: #6b5959;
+    }
+  }
+}
+
 // close 
 span{
   position: absolute;
@@ -469,11 +582,11 @@ span{
   height: 100%;
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.356);
+
+
   #dropdown_section{
     position: absolute;
     bottom: 0;
-    //background-color: #080e0f;
-   // height: 25em;
     width:100%;
 
     ul {
@@ -501,4 +614,26 @@ span{
     }
 
   }
+}
+
+.comment_box{
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  overflow: auto;
+    #comment_section{
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+
+      input[type="text"]{
+        background: #020b0c;
+        border-radius: 10px;
+        color: #fefefe;
+        height: 30px;
+        width: 95%;
+      }
+    }
 }
