--- a/UI/scss/mixins.scss
+++ b/UI/scss/mixins.scss
@@ -135,11 +135,12 @@
   transform:perspective(1200px) rotateY(90deg);
   transition: all 600ms ease;
   @media only screen and (min-width: 700px) {
-   position: relative;
-   bottom: 1.45em;
-   width: 30%;
+   position: absolute;
+   //bottom: 1.45em;
+   height: 100vh;
+   width: 20%;
    transform: none;
-   background: #0b0f19;
+   background: #080e0f;
  }
    @media only screen and (min-width: 900px) {
        width: 20%;
@@ -149,7 +150,9 @@
      transform: perspective(1200px) rotateY(0deg);
  }
 
- 
+  .sidebar-link{
+    padding-top: 7em;
+  } 
 
  a{
    display: inline-block;
@@ -166,9 +169,15 @@
    #active_link{
     color: #277379;
    }
+   #log-out{
 
-
-
+    @media only screen and (min-width: 700px) {
+      position: absolute;
+      bottom: 7em;
+      width: 100%;
+  }
+   
+   }
 }
 
 @mixin Table{
