--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -1,4 +1,5 @@
 @import "./variables.scss";
+//@import url('https://fonts.googleapis.com/css?family=Acme|Poiret+One|Oleo+Script+Swash+Cap');
 
 //global
 body {
