--- a/client/src/styles/app.scss
+++ b/client/src/styles/app.scss
@@ -28,11 +28,11 @@ header {
    .sidebar{
       @include sidebar;
    }
-
-
-}
+  }
 
 }
+
+
   #showcase {
     height: 100vh;
     background-color: rgba(3, 7, 29, 0.361);
@@ -44,6 +44,7 @@ header {
       opacity: 1;
 
     }
+
 
     .content-wrap {
       @media only screen and (min-width: 700px) {
@@ -101,14 +102,15 @@ header {
 
     }
   }
-.container{
-  height: 100vh;
-}
 
-#user-background-image{
-  @include background;
-  background: url("./../../assets/images/img7.jpg");
-  opacity: 1;
+  .containa{
+    height: 100vh;
+    position: relative;
+  }
+  #user-background-image{
+    @include background;
+    background: url("./../../assets/images/img7.jpg");
+    opacity: 1;
 }
 
 .main-content{
@@ -117,7 +119,7 @@ header {
   font-size: .8em;
   padding: 0 1em;
   overflow: hidden;
-  padding-bottom: 11em;
+  padding-bottom: 3em;
 
   @media only screen and (min-width: 700px) {
     display: grid;
@@ -161,7 +163,7 @@ header {
 
 
   .question{
-    overflow: hidden;
+    //overflow: hidden;
     .questions{
       display: grid;
       grid-column-gap: 1.5em;
@@ -333,10 +335,10 @@ header {
 /* footer */
 #footer {
   background: #080e0f;
-  position: fixed;
+  position: relative;
   width: 100%;
   height: 3rem;
-  bottom: 0;
+  margin-top:3em;
   p {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 0.8em;
